--- a/style.css
+++ b/style.css
@@ -5,4 +5,17 @@
 }
 body {
   font-family: "Barlow", sans-serif;
+  padding: 20px;
+}
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.list-items {
+  display: flex;
+  border: 2px solid red;
+}
+li {
+  list-style-type: none;
 }
