--- a/style.css
+++ b/style.css
@@ -5,16 +5,25 @@
 }
 body {
   font-family: "Barlow", sans-serif;
-  padding: 20px;
+  font-weight: 600;
+  font-size: 15px;
+  width: 480px;
+  border: 2px solid blue;
+  margin: 20px;
 }
 .nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  height: 10vh;
+  padding: 20px;
+  color: #227c9d;
 }
 .list-items {
   display: flex;
-  border: 2px solid red;
+  justify-content: space-around;
+  width: 50%;
 }
 li {
   list-style-type: none;
