--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 body {
   font-family: "Barlow", sans-serif;
-  font-weight: 600;
-  font-size: 15px;
+  font-weight: 700;
+  font-size: 20px;
   width: 480px;
   border: 2px solid blue;
   margin: 20px;
@@ -23,8 +23,12 @@ body {
 .list-items {
   display: flex;
   justify-content: space-around;
-  width: 50%;
+  width: 60%;
 }
 li {
   list-style-type: none;
+}
+li:hover {
+  border-bottom: 3px solid #e93b92;
+  margin-bottom: -3px;
 }
