style main section

--- a/style.css
+++ b/style.css
@@ -34,15 +34,38 @@ li:hover {
 }
 .hero {
   background-color: #227c9d;
-  height: 30vh;
+  height: 40vh;
   color: #a8dadc;
   font-weight: 400;
   padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 h1,
 h2 {
   font-weight: 500;
 }
 h1 {
-  font-size: 60px;
+  font-size: 50px;
+}
+.yellow-butterfly {
+  width: 60%;
+}
+.name {
+  width: 40%;
+}
+h2 {
+  color: #227c9d;
+  font-size: 30px;
+}
+.sub-text {
+  color: #ffcb77;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
