--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 10vh;
+
   padding: 20px;
-  color: #227c9d;
+  color: #a8dadc;
+  background-color: #227c9d;
 }
 .list-items {
   display: flex;
@@ -29,7 +30,7 @@ body {
 li {
   list-style-type: none;
 }
-li:hover {
+.nav-list:hover {
   border-bottom: 3px solid #e93b92;
   margin-bottom: -3px;
 }
@@ -56,7 +57,8 @@ h1 {
 .name {
   width: 40%;
 }
-h2 {
+h2,
+footer {
   color: #227c9d;
   font-size: 30px;
 }
@@ -67,7 +69,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 0px;
   height: 2500px;
 }
 .projects {
@@ -114,11 +115,40 @@ img {
   background-color: #227c9d;
   width: 100%;
   text-align: center;
-  margin-top: 20px;
-  height: 15vh;
+
+  height: 20vh;
 }
 .skills-icons {
   display: flex;
   justify-content: space-around;
   padding: 20px;
 }
+i:hover {
+  color: #e93b92;
+  text-decoration: none;
+}
+.about {
+  text-align: center;
+  padding: 30px;
+}
+.about-name {
+  margin-bottom: 20px;
+}
+.fa-1x {
+  font-size: 1.5rem;
+  }
+  .navbar-toggler.toggler-example {
+  cursor: pointer;
+  }
+  .dark-blue-text {
+  color: #0A38F5;
+  }
+  .dark-pink-text {
+  color: #AC003A;
+  }
+  .dark-amber-text {
+  color: #ff6f00;
+  }
+  .dark-teal-text {
+  color: #004d40;
+  }
