--- a/style.css
+++ b/style.css
@@ -31,12 +31,20 @@ li {
   border-bottom: 3px solid #e93b92;
   margin-bottom: -3px;
 }
+button.navbar-toggler.collapsed {
+  color: #a8dadc;
+}
+
+.navbar-toggler:focus {
+  color: #a8dadc;
+}
+
 .hero {
   background-color: #227c9d;
   height: 70vh;
   color: #a8dadc;
   font-weight: 400;
-  padding: 80px 0px 50px 30px;
+  padding: 130px 0px 50px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -68,7 +76,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 2800px;
+  height: 3100px;
 }
 .projects {
   height: 80%;
@@ -111,11 +119,19 @@ img {
   padding: 30px 10px;
   border-radius: 5px;
 }
+.wave {
+  width: 100%;
+  vertical-align: bottom;
+}
 .skills {
   background-color: #227c9d;
   width: 100%;
   text-align: center;
-  height: 20vh;
+  height: 30vh;
+}
+
+.skills-text {
+  color: #ffcb77;
 }
 .skills-icons {
   display: flex;
@@ -138,21 +154,8 @@ i:hover {
   justify-content: space-around;
 }
 
-button.navbar-toggler.collapsed {
-  color: #a8dadc;
-}
-.navbar-dark .navbar-toggler {
-  border: none;
-}
-.navbar-toggler:focus {
-  color: #a8dadc;
-}
-
-navbar-nav mr-auto {
-  border: 2px solid red;
-}
-
-.wave {
-  width: 100%;
-  vertical-align: bottom;
+footer {
+  background-color: #a8dadc;
+  height: 20vh;
+  padding-top: 20px;
 }
