--- a/main.scss
+++ b/main.scss
@@ -1,92 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
 
+$font-body: "Barlow", sans-serif;
+
+$color-primary: #227c9d;
+$color-secondary: #a8dadc;
+$color-grey: #e5e5e5;
+$color-yellow: #ffcb77;
+$color-pink: #e93b92;
+$color-black: #333333;
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: $font-body;
+    color: $color-black;
   }
   
+  a:link,
+  a:visited {
+      text-decoration: none;
+  }
   body {
-    font-family: "Barlow", sans-serif;
     font-weight: 400;
     font-size: 20px;
     width: 480px;
-    border: 2px solid #e5e5e5;
+    border: 2px solid $color-grey;
     border-radius: 5px;
   }
   
   .navbar {
     width: 100%;
     height: 10vh;
-    padding: 30px 40px 30px 10px;
+    padding: 30px 40px;
     display: flex;
     justify-content: flex-end;
-    color: #a8dadc;
-    background-color: #227c9d;
+    align-items: center;
+    color: $color-secondary;
+    background-color: $color-primary;
+
+    button.navbar-toggler.collapsed {
+        color: $color-secondary;
+      }
+      
+    .navbar-toggler:focus {
+        color: $color-secondary;
+      }
+
+
+    .nav-link {
+        color: $color-secondary;    
+      }
+
+    .nav-link:hover { 
+        border-bottom: 3px solid $color-pink;
+        margin-bottom: -3px;
+      }
+
   }
+
+  
   .navbar-collapse {
-    color: #a8dadc;
+    color: $color-secondary;
     display: flex;
     justify-content: flex-end;
     width: 100%;
     padding: 20px 10px;
     text-align: right;
   }
-  
-  li {
-    list-style-type: none;
-  }
-  .nav-link {
-    width: 70px;
-    color: #a8dadc;
-  }
-  .nav-link:hover {
-    border-bottom: 3px solid #e93b92;
-    margin-bottom: -3px;
-  }
-  button.navbar-toggler.collapsed {
-    color: #a8dadc;
-  }
-  
-  .navbar-toggler:focus {
-    color: #a8dadc;
-  }
+ 
   
   .hero {
-    background-color: #227c9d;
+    background-color: $color-primary;
     height: 70vh;
-    color: #a8dadc;
+    color: $color-secondary;
     font-weight: 400;
     padding: 20px 0px 20px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .yellow-butterfly {
+      width: 65%;
+      height: 70vh;
+      padding-top: 50px;
+    }
+
+    .name {
+      width: 35%;
+    }
+
+    .sub-text {
+      color:$color-yellow;
+      text-align: left;
+    }
   }
-  h1,
-  h2 {
-    font-weight: 500;
+
+  li {
+    list-style-type: none;
   }
+
   h1 {
-    font-size: 60px;
-  }
-  .yellow-butterfly {
-    width: 65%;
-    height: 70vh;
-    padding-top: 50px;
-  }
-  .name {
-    width: 35%;
-  }
-  h2,
-  footer {
-    color: #227c9d;
-    font-size: 40px;
-    text-align: center;
-  }
-  .sub-text {
-    color: #ffcb77;
-    text-align: left;
-  }
+      font-size: 60px;
+      color:$color-secondary;
+      font-weight: 500;
+    }
+  h2 {
+        color: $color-primary;
+        font-size: 40px;
+        text-align: center;
+        font-weight: 500;
+      }
+  
   main {
     display: flex;
     flex-direction: column;
@@ -124,11 +151,12 @@
   img {
     width: 80%;
     height: 50%;
+  
   }
   .box {
     display: flex;
     flex-direction: column;
-    background-color: #a8dadc;
+    background-color: $color-secondary;
     align-items: center;
     padding: 30px 10px;
     border-radius: 5px;
@@ -138,22 +166,25 @@
     vertical-align: bottom;
   }
   .skills {
-    background-color: #227c9d;
+    background-color: $color-primary;
     width: 100%;
     text-align: center;
     height: 40vh;
+
+    .skills-text {
+        color: $color-yellow;
+      }
+
+    .skills-icons {
+        display: flex;
+        justify-content: space-around;
+        padding: 20px;
+      }
   }
   
-  .skills-text {
-    color: #ffcb77;
-  }
-  .skills-icons {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-  }
+  
   i:hover {
-    color: #e93b92;
+    color: $color-pink;
     text-decoration: none;
   }
   .about {
@@ -161,10 +192,12 @@
     padding: 30px;
     background-image: url("images/butterflyEdit50.svg");
     background-size: contain;
+
+    .about-name {
+        margin-bottom: 20px;
+      }
   }
-  .about-name {
-    margin-bottom: 20px;
-  }
+ 
   .contact {
     display: flex;
     justify-content: space-around;
@@ -172,10 +205,13 @@
   }
   
   footer {
-    background-color: #a8dadc;
+    background-color: $color-secondary;
     height: 25vh;
     padding-top: 20px;
     padding-bottom: 30px;
+    color: $color-primary;
+    font-size: 40px;
+    text-align: center;
   }
   
   /*MEDIA QUERIES*/
@@ -255,5 +291,10 @@
     .skills-icons {
       font-size: 40px;
     }
+    .nav-link {
+        width: 100px;
+ 
+        
+      }
   }
   
