--- a/main.css
+++ b/main.css
@@ -3,10 +3,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Barlow", sans-serif;
+  color: #333333;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 body {
-  font-family: "Barlow", sans-serif;
   font-weight: 400;
   font-size: 20px;
   width: 480px;
@@ -17,11 +23,25 @@ body {
 .navbar {
   width: 100%;
   height: 10vh;
-  padding: 30px 40px 30px 10px;
+  padding: 30px 40px;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   color: #a8dadc;
   background-color: #227c9d;
+}
+.navbar button.navbar-toggler.collapsed {
+  color: #a8dadc;
+}
+.navbar .navbar-toggler:focus {
+  color: #a8dadc;
+}
+.navbar .nav-link {
+  color: #a8dadc;
+}
+.navbar .nav-link:hover {
+  border-bottom: 3px solid #e93b92;
+  margin-bottom: -3px;
 }
 
 .navbar-collapse {
@@ -31,28 +51,6 @@ body {
   width: 100%;
   padding: 20px 10px;
   text-align: right;
-}
-
-li {
-  list-style-type: none;
-}
-
-.nav-link {
-  width: 70px;
-  color: #a8dadc;
-}
-
-.nav-link:hover {
-  border-bottom: 3px solid #e93b92;
-  margin-bottom: -3px;
-}
-
-button.navbar-toggler.collapsed {
-  color: #a8dadc;
-}
-
-.navbar-toggler:focus {
-  color: #a8dadc;
 }
 
 .hero {
@@ -65,36 +63,34 @@ button.navbar-toggler.collapsed {
   justify-content: space-between;
   align-items: center;
 }
-
-h1,
-h2 {
-  font-weight: 500;
-}
-
-h1 {
-  font-size: 60px;
-}
-
-.yellow-butterfly {
+.hero .yellow-butterfly {
   width: 65%;
   height: 70vh;
   padding-top: 50px;
 }
-
-.name {
+.hero .name {
   width: 35%;
 }
+.hero .sub-text {
+  color: #ffcb77;
+  text-align: left;
+}
 
-h2,
-footer {
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 60px;
+  color: #a8dadc;
+  font-weight: 500;
+}
+
+h2 {
   color: #227c9d;
   font-size: 40px;
   text-align: center;
-}
-
-.sub-text {
-  color: #ffcb77;
-  text-align: left;
+  font-weight: 500;
 }
 
 main {
@@ -157,12 +153,10 @@ img {
   text-align: center;
   height: 40vh;
 }
-
-.skills-text {
+.skills .skills-text {
   color: #ffcb77;
 }
-
-.skills-icons {
+.skills .skills-icons {
   display: flex;
   justify-content: space-around;
   padding: 20px;
@@ -179,8 +173,7 @@ i:hover {
   background-image: url("images/butterflyEdit50.svg");
   background-size: contain;
 }
-
-.about-name {
+.about .about-name {
   margin-bottom: 20px;
 }
 
@@ -195,6 +188,9 @@ footer {
   height: 25vh;
   padding-top: 20px;
   padding-bottom: 30px;
+  color: #227c9d;
+  font-size: 40px;
+  text-align: center;
 }
 
 /*MEDIA QUERIES*/
@@ -284,5 +280,9 @@ h2 {
 
   .skills-icons {
     font-size: 40px;
+  }
+
+  .nav-link {
+    width: 100px;
   }
 }
