--- a/main.scss
+++ b/main.scss
@@ -1,76 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
-
-$font-body: "Barlow", sans-serif;
-
-$color-primary: #227c9d;
-$color-secondary: #a8dadc;
-$color-grey: #e5e5e5;
-$color-yellow: #ffcb77;
-$color-pink: #e93b92;
-$color-black: #333333;
+@import "./base";
+@import "./componants";
+@import "./layout";
 
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: $font-body;
-    color: $color-black;
-  }
-  
-  a:link,
-  a:visited {
-      text-decoration: none;
-  }
-  body {
-    font-weight: 400;
-    font-size: 20px;
-    width: 480px;
-    border: 2px solid $color-grey;
-    border-radius: 5px;
-  }
-  
-  .navbar {
-    width: 100%;
-    height: 10vh;
-    padding: 30px 40px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    color: $color-secondary;
-    background-color: $color-primary;
-
-    button.navbar-toggler.collapsed {
-        color: $color-secondary;
-      }
-      
-    .navbar-toggler:focus {
-        color: $color-secondary;
-      }
-
-
-    .nav-link {
-        color: $color-secondary;    
-      }
-
-    .nav-link:hover { 
-        border-bottom: 3px solid $color-pink;
-        margin-bottom: -3px;
-      }
-
-  }
 
   
-  .navbar-collapse {
-    color: $color-secondary;
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    padding: 20px 10px;
-    text-align: right;
-  }
- 
   
   .hero {
     background-color: $color-primary;
