--- a/_componants.scss
+++ b/_componants.scss
@@ -26,10 +26,8 @@
         border-bottom: 3px solid $color-pink;
         margin-bottom: -3px;
       }
-
   }
 
-  
   .navbar-collapse {
     color: $color-secondary;
     display: flex;
@@ -53,28 +51,29 @@
       width: 65%;
       height: 70vh;
       padding-top: 50px;
-    }
-
-    .name {
-      width: 35%;
-    }
-
-    
+    } 
   }
+
+  .name {
+    width: 35%;
+  }
+  
+  .name__heading {
+    font-size: 60px;
+    color:$color-secondary;
+    font-weight: 500;
+  }
+  .name__sub-heading {
+      color:$color-yellow;
+      text-align: left;
+      
+    }
 
   li {
     list-style-type: none;
   }
 
-  .name__heading {
-      font-size: 60px;
-      color:$color-secondary;
-      font-weight: 500;
-    }
-    .name__sub-heading {
-        color:$color-yellow;
-        text-align: left;
-      }
+  
   h2 {
         color: $color-primary;
         font-size: 40px;
@@ -90,11 +89,11 @@
     text-align: center;
     height: 40vh;
 
-    .skills__text {
+    &__text {
         color: $color-yellow;
       }
 
-    .skills__icons {
+    &__icons {
         display: flex;
         justify-content: space-around;
         padding: 20px;
@@ -114,23 +113,25 @@
     background-image: url("images/butterflyEdit50.svg");
     background-size: contain;
 
-    .about__name {
+    &__name {
         margin-bottom: 20px;
       }
   }
  
-  .contact__list {
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 30px;
-  }
+  
 
-  footer {
+  .contact {
     background-color: $color-secondary;
-    height: 25vh;
+    height: 30vh;
     padding-top: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     color: $color-primary;
     font-size: 40px;
     text-align: center;
+
+    &__list {
+        display: flex;
+        justify-content: space-around;
+        padding-bottom: 30px;
+      }
   }
